# Psyche

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  flake.nix
shared/core/: Cargo.toml
shared/core/src/: batch_id.rs  bounded_queue.rs  cancellable_barrier.rs  data_shuffle.rs  deterministic_shuffle.rs  interval_tree.rs  lcg.rs  lib.rs  lr_scheduler.rs  running_average.rs  similarity.rs  sized_iterator.rs  token_size.rs
shared/data-provider/: Cargo.toml  README.md
shared/data-provider/examples/: http.rs
shared/data-provider/src/: data_provider.rs  dataset.rs  dummy.rs  file_extensions.rs  http.rs  hub.rs  lib.rs  local.rs  test.xml  traits.rs
shared/data-provider/tests/: http.rs  local.rs
shared/data-provider/tests/resources/: llama3_tokenizer_license.txt
shared/data-provider/tests/resources/dolma/data/: dolma-v1_7-30B-tokenized-llama2-nanoset.npy
shared/data-provider/tests/resources/dolma/decoded/: 0.txt  1.txt
shared/data-provider/tests/resources/fineweb/data/: 00000_00000_shuffled.ds
shared/data-provider/tests/resources/fineweb/decoded/: 0.txt  1.txt
shared/eval/: Cargo.toml
shared/eval/examples/: evaluate.rs
shared/eval/src/: harness.rs  lib.rs  traits.rs
shared/eval/src/tasks/: arc.rs  hellaswag.rs  mmlu.rs  mmlu_pro.rs  mod.rs
shared/modeling/: Cargo.toml
shared/modeling/examples/: inference.rs  train.rs
shared/modeling/src/: auto_tokenizer.rs  batcher.rs  distro.rs  dummy.rs  fp32_gradient_accumulator.rs  lib.rs  llama.rs  llama_for_causal_lm.rs  safetensor_utils.rs  sampling.rs  tensor_parallelism.rs  token_output_stream.rs  traits.rs
