[package]
name = "psyche-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
fnv = "1.0.7"
serde_arrays = "0.1.0"
bitvec = { version = "1", features = ["serde", "std"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2.workspace = true

[features]
rand = ["dep:rand"]
